--- a/src/GlobalStyles.css
+++ b/src/GlobalStyles.css
@@ -6,6 +6,12 @@ body {
   z-index: 0;
 }
 
+.redalert {
+  color: red;
+  background-color: #003366;
+  border-radius: 10px;
+}
+
 .background-container {
   position: fixed;
   top: 0;
