--- a/src/pages/BlogPage.css
+++ b/src/pages/BlogPage.css
@@ -9,5 +9,34 @@
   
   p.blog {
     font-size: 1.2rem;
-    margin-bottom: 40px;
+    text-align: center;
   }
+
+  h2.blog {
+    margin-left: 2%;
+  }
+
+  .bloggy {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+.blue {
+    position: relative;
+    padding: 10px;
+    color: white;
+}
+
+.blue::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #003366;
+    opacity: 0.5;
+    border-radius: 10px;
+    z-index: -1;
+}
