--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -40,7 +40,7 @@ p {
 }
 
 @media screen and (max-width: 760px) {
-  h1 {
+  .home {
     font-size: medium;
   }
   .container {
@@ -49,7 +49,7 @@ p {
     margin: 5px auto;
     max-width: 100%;
   }
-  p {
+  .homep {
     font-size: small;
     margin-bottom: 4px;
   }
