--- a/src/pages/BlogPage.css
+++ b/src/pages/BlogPage.css
@@ -42,10 +42,10 @@
 }
 
 .curriculum {
-  max-width: '100%';
-  width: '50vw';
-  height: '45vw';
-  border-radius: '10px'; 
+  max-width: 100%;
+  width: 50vw;
+  height: 45vw;
+  border-radius: 10px; 
 }
 
 @media screen and (max-width: 760px) {
@@ -71,7 +71,7 @@
     max-width: 100vw;
   }  
   .curriculum {
-    width: '75vw';
-    height: '90vw';
+    width: 75vw;
+    height: 90vw;
   }
 }
