--- a/src/pages/BlogPage.css
+++ b/src/pages/BlogPage.css
@@ -71,7 +71,8 @@
     max-width: 100vw;
   }  
   .curriculum {
-    width: 85vw;
+    width: 100%;
     height: 90vw;
+    overflow: scroll;
   }
 }
