--- a/src/pages/BlogPage.css
+++ b/src/pages/BlogPage.css
@@ -46,7 +46,7 @@
   width: 50vw;
   height: 45vw;
   border-radius: 10px; 
-  object-fit: contain;
+  object-fit: scale-down;
 }
 
 @media screen and (max-width: 760px) {
