--- a/src/pages/BlogPage.css
+++ b/src/pages/BlogPage.css
@@ -44,7 +44,7 @@
 .curriculum {
   max-width: 100%;
   width: 50vw;
-  height: auto;
+  height: 90vw;
   border-radius: 10px; 
   object-fit: scale-down;
 }
