--- a/src/pages/BlogPage.css
+++ b/src/pages/BlogPage.css
@@ -44,7 +44,7 @@
 .curriculum {
   max-width: 100%;
   width: 50vw;
-  height: auto;
+  height: fit-content;
   border-radius: 10px;
 }
 
@@ -72,6 +72,5 @@
   }  
   .curriculum {
     width: 85vw;
-    height: 90vw;
   }
 }
