--- a/src/pages/AboutUsPage.css
+++ b/src/pages/AboutUsPage.css
@@ -70,11 +70,11 @@ p.a1 {
   
   .a1 {
     color: #003366;
-    font-size: .9rem;
+    font-size: 1.5rem;
   }
   
   p.a1 {
-    font-size: .7rem;
+    font-size: 1.5rem;
   }
   
   .about::before {
