--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -39,7 +39,7 @@ p {
   opacity: 1;
 }
 
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 960px) {
   .home {
     font-size: medium;
   }
@@ -54,9 +54,7 @@ p {
     margin-bottom: 4px;
   }
   #q {
-    bottom: 5%;
-    right: 5%;
-    font-size: .5rem;
+    width: 72%;
   }
   .quote, quote.fade-in {
     max-width: 100vw;
