--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -61,19 +61,39 @@
   }
 
   @media screen and (max-width: 760px) {
-    .navbar-logo, .navbar-links {
-      font-size: 7px;
-    }  
-    .navbar-slide {
-      height: 9px;
-    }  
-    .navbar {
-      padding: 5px 4px;
-    }  
-    .navbar-link {
-      padding: 1px 8px;
-    }
-    .navbar-links {
-      gap: 1px;
-    }
+  .navbar {
+    padding: 5px;
   }
+
+  .navbar-container {
+    flex-direction: column;
+    align-items: stretch;
+    gap: 5px;
+  }
+
+  .navbar-logo {
+    font-size: 1rem;
+    text-align: center;
+  }
+
+  .navbar-links {
+    display: flex;
+    overflow-x: auto;
+    white-space: nowrap;
+    gap: 5px;
+  }
+
+  .navbar-links::-webkit-scrollbar {
+    display: none;
+  }
+
+  .navbar-link {
+    font-size: 0.7rem;
+    padding: 3px 2px;
+  }
+
+  /* Disable the slide animation on mobile */
+  .navbar-slide {
+    display: none;
+  }
+}
